--- a/index.html
+++ b/index.html
@@ -2697,8 +2697,8 @@
 
                     if (!issuperspeeds && speed.length >= 2) { // 3人以上で発動
                         comboTotal += 270;
-                        activatedCombos.push("超機動力野球 +270");
-                        console.log("超機動力野球+270");
+                        activatedCombos.push("超機動力野球 (+270)");
+                        console.log("超機動力野球 (+270)");
                     }
 
 
