--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <center><b>
             <font size="15" color="red">プロスピA攻略（ヤクルト純正）</font>　
     </center></b>
-    <br>当サイトは、特訓、得能、特守レベリングがmax前提でシュミレーションできるサイトです。</br>
+    <br>当サイトは、特訓、特殊能力、特守、レベリングがmax前提でシュミレーションできるサイトです。</br>
     <table border=1>
         <thead>
             <tr>
