--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 
@@ -16,7 +17,7 @@
     <center><b>
             <font size="15" color="red">プロスピA攻略（ヤクルト純正）</font>　
     </center></b>
-    <br>当サイトは、特訓、特殊能力、特守、レベリングがmax前提でシュミレーションできるサイトです。</br>
+    <br>当サイトは、特訓、得能、特守レベリングがmax前提でシュミレーションできるサイトです。</br>
     <table border=1>
         <thead>
             <tr>
@@ -87,7 +88,7 @@
                         <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                         <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                         <option value="S1北村拓己">S1北村拓己(野手)</option>
-                        <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                         <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                         <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                         <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -158,7 +159,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -228,7 +229,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -298,7 +299,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -369,7 +370,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -440,7 +441,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -510,7 +511,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -582,7 +583,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -653,7 +654,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -710,7 +711,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -765,7 +766,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -820,7 +821,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -876,7 +877,7 @@
                     <option value="S1太田賢吾">S1太田賢吾(野手)</option>
                     <option value="S1濱田太貴">S1濱田太貴(野手)</option>
                     <option value="S1北村拓己">S1北村拓己(野手)</option>
-                    <option value="TS青木宣親">TS青木宣親(野手)</option>
+
                     <option value="TS福地寿樹">TS福地寿樹(野手)</option>
                     <option value="TS稲葉篤紀">TS稲葉篤紀(野手)</option>
                     <option value="TS山崎晃大朗">TS山崎晃大朗(野手)</option>
@@ -2262,7 +2263,7 @@
                     }
 
                     // 時を超えた活躍
-                    if (selectedPlayers.includes("TS田中浩康") || selectedPlayers.includes("TS山本哲也") || selectedPlayers.includes("TS石川雅規") || selectedPlayers.includes("TS相川亮二") || selectedPlayers.includes("TS塩見泰隆") || selectedPlayers.includes("TS稲葉篤紀") || selectedPlayers.includes("TS福地寿樹") || selectedPlayers.includes("TS土橋勝征") || selectedPlayers.includes("TS吉井理人") || selectedPlayers.includes("TS由規") || selectedPlayers.includes("TS山田哲人") || selectedPlayers.includes("TS山崎晃大朗") || selectedPlayers.includes("TS池山隆寛") || selectedPlayers.includes("TS伊藤智仁") || selectedPlayers.includes("TS高津臣吾") || selectedPlayers.includes("TS小川泰弘") || selectedPlayers.includes("TS青木宣親") || selectedPlayers.includes("TS石井久寿") || selectedPlayers.includes("TS雄平")) {
+                    if (selectedPlayers.includes("TS田中浩康") || selectedPlayers.includes("TS山本哲也") || selectedPlayers.includes("TS石川雅規") || selectedPlayers.includes("TS相川亮二") || selectedPlayers.includes("TS塩見泰隆") || selectedPlayers.includes("TS稲葉篤紀") || selectedPlayers.includes("TS福地寿樹") || selectedPlayers.includes("TS土橋勝征") || selectedPlayers.includes("TS吉井理人") || selectedPlayers.includes("TS由規") || selectedPlayers.includes("TS山田哲人") || selectedPlayers.includes("TS山崎晃大朗") || selectedPlayers.includes("TS池山隆寛") || selectedPlayers.includes("TS伊藤智仁") || selectedPlayers.includes("TS高津臣吾") || selectedPlayers.includes("TS小川泰弘") || selectedPlayers.includes("TS石井久寿") || selectedPlayers.includes("TS雄平")) {
                         comboTotal += 70;
                         activatedCombos.push("時を超えた活躍 (+70)");
                         console.log("時を超えた活躍 (+70)");
