--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プロスピAオーダーシュミレータ(ヤクルト純正)</title>
-    <link rel="stylesheet" href="ren1.css">
+    <link rel="stylesheet" href="stylesheet.css">
 
 
 
