--- a/index.html
+++ b/index.html
@@ -652,10 +652,10 @@
         const playerData = {
 
             "S1中村悠平": {
-                "type": "野手", "stat1": 67, "stat2": 65, "stat3": 64, "spirits": 4900,
+                "type": "野手", "stat1": 67, "stat2": 64, "stat3": 66, "spirits": 4900,
                 "abilities": ["超捕手", "流し打ち", "選球眼"], "battingSide": "右",
                 "mainPosition": { "name": "捕手", "適性": 69 },
-                "fielding": { "捕球": 65, "スローイング": 77, "肩力": 82 },
+                "fielding": { "捕球": 60, "スローイング": 77, "肩力": 82 },
                 "subPositions": [] // 明示的に空配列を追加
             },
             "TS相川亮二": {
@@ -667,7 +667,7 @@
                 "subPositions": [] // 明示的に空配列を追加
             },
             "S1松本直樹": {
-                "type": "野手", "stat1": 65, "stat2": 64, "stat3": 64, "spirits": 4900, "abilities": ["超チャンス", "粘りうち", "代打"], "battingSide": "右",
+                "type": "野手", "stat1": 67, "stat2": 63, "stat3": 63, "spirits": 4900, "abilities": ["超チャンス", "粘りうち", "代打"], "battingSide": "右",
                 "mainPosition": {
                     "name": "捕手",
                     "適性": 60
@@ -693,7 +693,7 @@
             },
 
             "S1オスナ": {
-                "type": "野手", "stat1": 72, "stat2": 77, "stat3": 54, "spirits": 4900, "abilities": ["超ライドラ", "フルスイング", "チャンス"], "battingSide": "右",
+                "type": "野手", "stat1": 73, "stat2": 76, "stat3": 54, "spirits": 4900, "abilities": ["超ライドラ", "フルスイング", "チャンス"], "battingSide": "右",
                 "mainPosition": {
                     "name": "一塁手",
                     "適性": 61
@@ -726,7 +726,7 @@
                 }
             },
             "S1武岡龍世": {
-                "type": "野手", "stat1": 57, "stat2": 60, "stat3": 78, "spirits": 4900, "abilities": ["超代打の神様", "粘りうち", "意外性"], "battingSide": "右",
+                "type": "野手", "stat1": 56, "stat2": 62, "stat3": 74, "spirits": 4900, "abilities": ["超代打の神様", "粘りうち", "意外性"], "battingSide": "右",
                 "mainPosition": {
                     "name": "二塁手",
                     "適性": 62
@@ -743,7 +743,7 @@
                 }
             },
             "S1宮本丈": {
-                "type": "野手", "stat1": 67, "stat2": 64, "stat3": 70, "spirits": 4900, "abilities": ["超チャンメ", "選球眼", "初球"], "battingSide": "右",
+                "type": "野手", "stat1": 66, "stat2": 62, "stat3": 70, "spirits": 4900, "abilities": ["超チャンメ", "選球眼", "初球"], "battingSide": "右",
                 "mainPosition": {
                     "name": "右翼手",
                     "適性": 60
@@ -774,11 +774,11 @@
 
             },
             "S1山田哲人": {
-                "type": "野手", "stat1": 65, "stat2": 77, "stat3": 78, "spirits": 4900, "abilities": ["超パワヒ", "プルヒ", "初球"], "battingSide": "右",
+                "type": "野手", "stat1": 65, "stat2": 76, "stat3": 79, "spirits": 4900, "abilities": ["超パワヒ", "プルヒ", "選球眼"], "battingSide": "右",
                 "mainPosition": {
                     "name": "二塁手",
                     "適性": 73
-                }, "fielding": { "捕球": 73, "スローイング": 79, "肩力": 65 },
+                }, "fielding": { "捕球": 78, "スローイング": 79, "肩力": 65 },
                 "subPositions": [] // 明示的に空配列を追加
             },
             "TS山田哲人": {
@@ -795,7 +795,7 @@
                 ], "fielding": { "捕球": 69, "スローイング": 50, "肩力": 65 }
             },
             "S1村上宗隆": {
-                "type": "野手", "stat1": 77, "stat2": 84, "stat3": 73, "spirits": 4900, "abilities": ["超アーチ", "広角", "チャンス"], "battingSide": "左",
+                "type": "野手", "stat1": 78, "stat2": 84, "stat3": 71, "spirits": 4900, "abilities": ["超アーチ", "広角", "チャンス"], "battingSide": "左",
                 "mainPosition": {
                     "name": "三塁手",
                     "適性": 58
@@ -811,13 +811,14 @@
                 }
             },
             "S1茂木栄五郎": {
-                "type": "野手", "stat1": 73, "stat2": 73, "stat3": 75, "spirits": 4900, "abilities": ["超ライドラ", "走塁", "代打"], "battingSide": "左",
+                "type": "野手", "stat1": 68, "stat2": 67, "stat3": 75, "spirits": 4900, "abilities": ["超代打", "走塁", "ライドラ"], "battingSide": "左",
                 "mainPosition": {
-                    "name": "三塁手",
-                    "適性": 73
+                    "name": "二塁手",
+                    "適性": 57
                 },
                 "subPositions": [
-                    { "name": "遊撃手", "適性": 69 }
+                    { "name": "三撃手", "適性": 63 },
+                    { "name": "右翼手", "適性": 57 }
 
                 ],
                 "fielding": {
@@ -835,15 +836,15 @@
                 "subPositions": [] // 明示的に空配列を追加
             },
             "S1長岡秀樹": {
-                "type": "野手", "stat1": 78, "stat2": 73, "stat3": 75, "spirits": 4900, "abilities": ["超流し打ち", "固め打ち", "初球"], "battingSide": "左",
+                "type": "野手", "stat1": 76, "stat2": 69, "stat3": 73, "spirits": 4900, "abilities": ["超流し打ち", "固め打ち", "初球"], "battingSide": "左",
                 "mainPosition": {
                     "name": "遊撃手",
-                    "適性": 75
-                }, "fielding": { "捕球": 73, "スローイング": 75, "肩力": 67 },
+                    "適性": 70
+                }, "fielding": { "捕球": 65, "スローイング": 71, "肩力": 67 },
                 "subPositions": [] // 明示的に空配列を追加
             },
             "S1サンタナ": {
-                "type": "野手", "stat1": 82, "stat2": 80, "stat3": 64, "spirits": 4900, "abilities": ["超広角", "ライドラ", "対左投手"], "battingSide": "右",
+                "type": "野手", "stat1": 81, "stat2": 80, "stat3": 63, "spirits": 4900, "abilities": ["超広角", "ライドラ", "対左投手"], "battingSide": "右",
                 "mainPosition": {
                     "name": "左翼手",
                     "適性": 48
@@ -859,7 +860,7 @@
                 }
             },
             "S1西川遥輝": {
-                "type": "野手", "stat1": 70, "stat2": 65, "stat3": 85, "spirits": 4900, "abilities": ["超選球眼", "盗塁", "固め打ち"], "battingSide": "左",
+                "type": "野手", "stat1": 67, "stat2": 64, "stat3": 85, "spirits": 4900, "abilities": ["超選球眼", "盗塁", "固め打ち"], "battingSide": "左",
                 "mainPosition": {
                     "name": "中堅手",
                     "適性": 62
@@ -892,24 +893,24 @@
                 }
             },
             "S1丸山和郁": {
-                "type": "野手", "stat1": 65, "stat2": 65, "stat3": 83, "spirits": 4900, "abilities": ["超チャンメ", "走塁", "内野安打"], "battingSide": "左",
+                "type": "野手", "stat1": 66, "stat2": 64, "stat3": 83, "spirits": 4900, "abilities": ["超チャンメ", "選球眼", "内野安打"], "battingSide": "左",
                 "mainPosition": {
                     "name": "中堅手",
-                    "適性": 65
+                    "適性": 60
                 },
                 "subPositions": [
-                    { "name": "左翼手", "適性": 63 },
-                    { "name": "右翼手", "適性": 65 }
+                    { "name": "左翼手", "適性": 60 },
+                    { "name": "右翼手", "適性": 60 }
 
                 ],
                 "fielding": {
                     "捕球": 53,
                     "スローイング": 50,
-                    "肩力": 78
+                    "肩力": 68
                 }
             },
             "S1岩田幸宏": {
-                "type": "野手", "stat1": 57, "stat2": 65, "stat3": 80, "spirits": 4900, "abilities": ["超チャンメ", "走塁", "盗塁"], "battingSide": "左",
+                "type": "野手", "stat1": 54, "stat2": 56, "stat3": 80, "spirits": 4900, "abilities": ["超チャンメ", "走塁", "盗塁"], "battingSide": "左",
                 "mainPosition": {
                     "name": "中堅手",
                     "適性": 63
@@ -938,7 +939,7 @@
                 }
             },
             "S1塩見泰隆": {
-                "type": "野手", "stat1": 75, "stat2": 75, "stat3": 80, "spirits": 4900, "abilities": ["超広角", "チャンメ", "選球眼"], "battingSide": "右",
+                "type": "野手", "stat1": 75, "stat2": 75, "stat3": 82, "spirits": 4900, "abilities": ["超広角", "チャンメ", "選球眼"], "battingSide": "右",
                 "mainPosition": {
                     "name": "中堅手",
                     "適性": 73
@@ -1043,7 +1044,7 @@
             },
 
             "TS福地寿樹": {
-                "type": "野手", "stat1": 80, "stat2": 70, "stat3": 83, "spirits": 4900, "abilities": ["超盗塁", "チャンスメーカー", "内野安打"], "battingSide": "両",
+                "type": "野手", "stat1": 83, "stat2": 70, "stat3": 83, "spirits": 4900, "abilities": ["超盗塁", "チャンスメーカー", "内野安打"], "battingSide": "両",
                 "mainPosition": {
                     "name": "右翼手",
                     "適性": 67
@@ -1097,17 +1098,17 @@
             },
 
             "S1高橋圭二": {
-                "type": "投手", "stat1": 77, "stat2": 70, "stat3": 75, "spirits": 4900, "abilities": ["超ノビ", "奪三振", "キレ"], "bPitchCount": 2, "mainPosition": { "name": "先発" }
+                "type": "投手", "stat1": 76, "stat2": 68, "stat3": 74, "spirits": 4900, "abilities": ["超ノビ", "奪三振", "キレ"], "bPitchCount": 1, "mainPosition": { "name": "先発" }
             },
             "S1吉村貢司郎": {
-                "type": "投手", "stat1": 75, "stat2": 77, "stat3": 75, "spirits": 4900, "abilities": ["超ノビ", "キレ", "安定感"], "bPitchCount": 2, "mainPosition": { "name": "先発" }
+                "type": "投手", "stat1": 73, "stat2": 75, "stat3": 73, "spirits": 4900, "abilities": ["超ノビ", "キレ", "安定感"], "bPitchCount": 2, "mainPosition": { "name": "先発" }
             },
 
             "S1奥川恭伸": {
-                "type": "投手", "stat1": 75, "stat2": 75, "stat3": 73, "spirits": 4900, "abilities": ["超奪三振", "キレ", "援護"], "bPitchCount": 1, "mainPosition": { "name": "先発" }
+                "type": "投手", "stat1": 73, "stat2": 75, "stat3": 75, "spirits": 4900, "abilities": ["超奪三振", "キレ", "援護"], "bPitchCount": 1, "mainPosition": { "name": "先発" }
             },
             "S1小川泰弘": {
-                "type": "投手", "stat1": 72, "stat2": 80, "stat3": 78, "spirits": 4900, "abilities": ["超コントロール", "援護", "キレ"], "bPitchCount": 1, "mainPosition": { "name": "先発" }
+                "type": "投手", "stat1": 72, "stat2": 82, "stat3": 80, "spirits": 4900, "abilities": ["超コントロール", "球持ち", "キレ"], "bPitchCount": 1, "mainPosition": { "name": "先発" }
             },
             "TS小川泰弘": {
                 "type": "投手", "stat1": 80, "stat2": 84, "stat3": 82, "spirits": 4900, "abilities": ["超対ピンチ", "ノビ", "キレ"], "bPitchCount": 2, "mainPosition": { "name": "先発" }, // 主ポジション: 先発
@@ -1120,7 +1121,7 @@
                 "type": "投手", "stat1": 70, "stat2": 61, "stat3": 71, "spirits": 4900, "abilities": ["超対左打者", "対強打者", "存在感"], "bPitchCount": 2, "mainPosition": { "name": "先発" }
             },
             "S1ランバート": {
-                "type": "投手", "stat1": 75, "stat2": 70, "stat3": 70, "spirits": 4900, "abilities": ["超打たれ強さ", "重い球", "キレ"], "bPitchCount": 2, "mainPosition": { "name": "先発" }
+                "type": "投手", "stat1": 66, "stat2": 63, "stat3": 66, "spirits": 4900, "abilities": ["超打たれ強さ", "重い球", "キレ"], "bPitchCount": 0, "mainPosition": { "name": "先発" }
             },
             "TS石川雅規": {
                 "type": "投手", "stat1": 75, "stat2": 83, "stat3": 80, "spirits": 4900, "abilities": ["超コントロール", "安定感", "キレ"], "bPitchCount": 2, "mainPosition": { "name": "先発" }, // 主ポジション: 先発
@@ -1129,10 +1130,10 @@
                 ]
             },
             "S1石川雅規": {
-                "type": "投手", "stat1": 68, "stat2": 80, "stat3": 70, "spirits": 4900, "abilities": ["超コントロール", "緩急", "打たれ強さ"], "bPitchCount": 2, "mainPosition": { "name": "先発" }
+                "type": "投手", "stat1": 68, "stat2": 80, "stat3": 70, "spirits": 4900, "abilities": ["超コントロール", "緩急", "打たれ強さ"], "bPitchCount": 1, "mainPosition": { "name": "先発" }
             },
             "TS由規": {
-                "type": "投手", "stat1": 79, "stat2": 65, "stat3": 82, "spirits": 4900, "abilities": ["超豪速球", "奪三振", "荒れ球"], "bPitchCount": 2, "mainPosition": { "name": "先発" }
+                "type": "投手", "stat1": 79, "stat2": 65, "stat3": 82, "spirits": 4900, "abilities": ["超豪速球", "奪三振", "荒れ球"], "bPitchCount": 1, "mainPosition": { "name": "先発" }
             },
             "TS伊藤智仁": {
                 "type": "投手", "stat1": 81, "stat2": 73, "stat3": 81, "spirits": 4900, "abilities": ["超奪三振ショー", "キレ", "対強打者"], "bPitchCount": 2, "mainPosition": { "name": "先発" }, // 主ポジション: 先発
@@ -1147,7 +1148,7 @@
                 ]
             },
             "S1山野太一": {
-                "type": "投手", "stat1": 67, "stat2": 70, "stat3": 70, "spirits": 4900, "abilities": ["超キレ", "援護", "ノビ"], "bPitchCount": 0, "mainPosition": { "name": "先発" }, // 主ポジション: 先発
+                "type": "投手", "stat1": 70, "stat2": 72, "stat3": 70, "spirits": 4900, "abilities": ["超キレ", "援護", "ノビ"], "bPitchCount": 0, "mainPosition": { "name": "先発" }, // 主ポジション: 先発
                 "subPositions": [
                     { "name": "中継ぎ" } // 副ポジション: 中継ぎ
                 ]
@@ -1165,37 +1166,37 @@
                 ]
             },
             "S1石山泰稚": {
-                "type": "投手", "stat1": 73, "stat2": 75, "stat3": 65, "spirits": 4900, "abilities": ["超キレ", "ノビ", "奪三振"], "bPitchCount": 2, "mainPosition": { "name": "中継ぎ" }, // 主ポジション: 先発
+                "type": "投手", "stat1": 73, "stat2": 76, "stat3": 64, "spirits": 4900, "abilities": ["超キレ", "ノビ", "奪三振"], "bPitchCount": 2, "mainPosition": { "name": "中継ぎ" }, // 主ポジション: 先発
                 "subPositions": [
                     { "name": "抑え" } // 副ポジション: 中継ぎ
                 ]
             },
             "S1田口麗人": {
-                "type": "投手", "stat1": 77, "stat2": 75, "stat3": 70, "spirits": 4900, "abilities": ["超キレ", "緩急", "内角"], "bPitchCount": 2, "mainPosition": { "name": "中継ぎ" }
+                "type": "投手", "stat1": 76, "stat2": 75, "stat3": 71, "spirits": 4900, "abilities": ["超キレ", "緩急", "内角"], "bPitchCount": 3, "mainPosition": { "name": "中継ぎ" }
             },
             "S1木澤尚文": {
-                "type": "投手", "stat1": 75, "stat2": 71, "stat3": 65, "spirits": 4900, "abilities": ["超キレ", "対ピンチ", "対右打者"], "bPitchCount": 1, "mainPosition": { "name": "中継ぎ" }, // 主ポジション: 先発
+                "type": "投手", "stat1": 74, "stat2": 73, "stat3": 65, "spirits": 4900, "abilities": ["超キレ", "対ピンチ", "対右打者"], "bPitchCount": 2, "mainPosition": { "name": "中継ぎ" }, // 主ポジション: 先発
                 "subPositions": [
                     { "name": "抑え" } // 副ポジション: 中継ぎ
                 ]
             },
             "S1山本大貴": {
-                "type": "投手", "stat1": 77, "stat2": 70, "stat3": 65, "spirits": 4900, "abilities": ["超キレ", "奪三振", "球持ち"], "bPitchCount": 1, "mainPosition": { "name": "中継ぎ" }
+                "type": "投手", "stat1": 77, "stat2": 61, "stat3": 63, "spirits": 4900, "abilities": ["超キレ", "奪三振", "球持ち"], "bPitchCount": 2, "mainPosition": { "name": "中継ぎ" }
             },
             "TS石井弘寿": {
                 "type": "投手", "stat1": 86, "stat2": 76, "stat3": 65, "spirits": 4600, "abilities": ["超豪速球", "奪三振", "対ピンチ"], "bPitchCount": 1, "mainPosition": { "name": "中継ぎ" }
             },
             "S1大西広樹": {
-                "type": "投手", "stat1": 76, "stat2": 80, "stat3": 66, "spirits": 4900, "abilities": ["超コントロール", "グラウンドボーラー", "対ピンチ"], "bPitchCount": 2, "mainPosition": { "name": "中継ぎ" }
+                "type": "投手", "stat1": 73, "stat2": 79, "stat3": 67, "spirits": 4900, "abilities": ["超対ピンチ", "グラウンドボーラー", "コントロール"], "bPitchCount": 1, "mainPosition": { "name": "中継ぎ" }
             },
             "S1星知弥": {
-                "type": "投手", "stat1": 74, "stat2": 68, "stat3": 65, "spirits": 4900, "abilities": ["超豪速球", "ノビ", "内角"], "bPitchCount": 2, "mainPosition": { "name": "中継ぎ" }, // 主ポジション: 先発
+                "type": "投手", "stat1": 73, "stat2": 67, "stat3": 67, "spirits": 4900, "abilities": ["超豪速球", "ノビ", "内角"], "bPitchCount": 2, "mainPosition": { "name": "中継ぎ" }, // 主ポジション: 先発
                 "subPositions": [
                     { "name": "抑え" } // 副ポジション: 中継ぎ
                 ]
             },
             "S1丸山翔太": {
-                "type": "投手", "stat1": 76, "stat2": 65, "stat3": 63, "spirits": 4900, "abilities": ["超キレ", "奪三振", "打たれ強さ"], "bPitchCount": 0, "mainPosition": { "name": "中継ぎ" }
+                "type": "投手", "stat1": 74, "stat2": 61, "stat3": 61, "spirits": 4900, "abilities": ["超キレ", "奪三振", "打たれ強さ"], "bPitchCount": 0, "mainPosition": { "name": "中継ぎ" }
             },
             "S1長谷川宙輝": {
                 "type": "投手", "stat1": 73, "stat2": 66, "stat3": 68, "spirits": 4900, "abilities": ["超奪三振", "キレ", "荒れ球"], "bPitchCount": 0, "mainPosition": { "name": "中継ぎ" }
@@ -1210,9 +1211,16 @@
                 ]
             },
             "S1小澤怜司": {
-                "type": "投手", "stat1": 76, "stat2": 74, "stat3": 73, "spirits": 4900, "abilities": ["超ノビ", "緩急", "対ピンチ"], "bPitchCount": 1, "mainPosition": { "name": "先発" }, // 主ポジション: 先発
+                "type": "投手", "stat1": 75, "stat2": 71, "stat3": 72, "spirits": 4900, "abilities": ["超ノビ", "緩急", "対ピンチ"], "bPitchCount": 1, "mainPosition": { "name": "抑え" }, // 主ポジション: 先発
                 "subPositions": [
-                    { "name": "中継ぎ" }, { "name": "抑え" }// 副ポジション: 中継ぎ
+                    { "name": "中継ぎ" }, { "name": "先発" }// 副ポジション: 中継ぎ
+                ]
+
+            },
+            "S1高梨裕稔": {
+                "type": "投手", "stat1": 73, "stat2": 74, "stat3": 70, "spirits": 4900, "abilities": ["超対ピンチ", "奪三振", "ノビ"], "bPitchCount": 1, "mainPosition": { "name": "先発" }, // 主ポジション: 先発
+                "subPositions": [
+                    { "name": "中継ぎ" }
                 ]
             },
             "TS山本哲哉": {
@@ -1251,6 +1259,7 @@
                 { text: "切り込み隊長(ミート+1,走力+1)", value: "1,0,1,0,0" },
                 { text: "ラン＆ガン(パワー+1,走力+1)", value: "0,1,1,0,0" },
                 { text: "強打者(ミート+1,パワー+1)", value: "1,1,0,0,0" },
+                { text: "反骨精神(ミート-1,パワー+2,スピ+10)", value: "-1,2,0,10,1" },
                 { text: "ミート自慢(ミート+1)", value: "1,0,0,0,0" },
                 { text: "パワー自慢(パワー+1)", value: "0,1,0,0,0" },
                 { text: "大砲(パワー+1)", value: "0,1,0,0,0" },
@@ -1278,6 +1287,7 @@
                 { text: "攻めの投球術(球威+1,スタミナ+1)", value: "1,0,1,0,0" },
                 { text: "粘りの投球(制球+1,スタミナ+1)", value: "0,1,1,0,0" },
                 { text: "好投手(球威+1,制球+1)", value: "1,1,0,0,0" },
+                { text: "反骨精神(球威+2,制球-1,スピ+10)", value: "2,-1,0,10,1" },
                 { text: "球威自慢(球威+1)", value: "1,0,0,0,0" },
                 { text: "喧嘩投法(球威+2,制球-1)", value: "2,-1,0,0,0" },
                 { text: "制球自慢(制球+1)", value: "0,1,0,0,0" },
