--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
                 "subPositions": [] // 明示的に空配列を追加
             },
             "S1長岡秀樹": {
-                "type": "野手", "stat1": 76, "stat2": 69, "stat3": 73, "spirits": 4900, "abilities": ["超流し打ち", "固め打ち", "初球"], "battingSide": "左",
+                "type": "野手", "stat1": 76, "stat2": 69, "stat3": 73, "spirits": 4900, "abilities": ["超流し打ち", "チャンス", "逆境"], "battingSide": "左",
                 "mainPosition": {
                     "name": "遊撃手",
                     "適性": 70
